syntax = "proto3";

import "empty.proto";
import "user.proto";
import "exam.proto";

option java_package = "org.maciejmarczak.ds.rpc.server.protos";

message PatientList {
    repeated User patient = 1;
}

message PatientId {
    string id = 1;
}

service PatientService {
    rpc GetAllPatients (Empty) returns (PatientList) {}
    rpc GetExamsByPatientId (PatientId) returns (stream Exam) {}
}